--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ClietsWithContacts
+spring.application.name=ClientsWithContacts
 
 # bd config
 spring.datasource.driver-class-name=org.postgresql.Driver
